# c_cpp_procs

./: .gitignore  CMakeLists.txt  Makefile  README.md  dassert.h  epollutils.h  errorhandle.h  errorhandle.txt  pollutils.h  portability.h
cmake/: cpp.cmake
doc/logging/: syslog.txt
doc/procspawn/: procspawn.txt
doc/procspawn/examples/: procspawn_fread.c  procspawn_proc_pipeline.c  procspawn_read.c
examples/procspawn/: procspawn_fread.c  procspawn_proc_pipeline.c  procspawn_read.c
include/: daemonutils.h  dassert.h  procspawn.h  strutils.h
include/c_procs/: daemonutils.h  dassert.h  errors.h  memutils.h  numutils.h  portability.h  strutils.h  timeutils.h
include/c_procs/httputils/: httpsrvutils.h
include/c_procs/logutils/: syslogutils.h
include/c_procs/netutils/: epollutils.h  netutils.h
include/ev_loop/: ev_loop.h
include/netutils/: netutils.h  pollutils.h
include/pthreadutils/: thrdpool.h
procspawn/: Makefile  test.c  test.pl
procspawn/examples/: procspawn_proc_pipeline.c  procspawn_read.c
procutil/: Makefile  procutil.c
procutils/: Makefile  test.c
src/: daemonutils.c  fileutils.c  procspawn.c  procutils.c  strutils.c  timeutils.c
src/ev_loop/: ev_loop.c
src/httputils/: httpsrvutils.c  mimetypes.c
src/netutils/: netutils.c
src/pthreadutils/: thrdpool.c
test/: CMakeLists.txt  Makefile  daemon_foreground_test.c  daemon_test.c  main.c  numutils_test.c  procspawn_test.c  procspawn_test.pl  procutils_test.c  strutils_test.c  test_procspawn.c  test_procutil.c
